Some comments added.

--- a/bin/bobcat.ini
+++ b/bin/bobcat.ini
@@ -1,6 +1,7 @@
+# Sample ini file.
 [Bobcat]
 book-enable=true
-book-name=Bobcat2
+book-name=Bobcat2 # Details are in section [Bobcat2].
 log-file=true
 
 [Bobcat2]
