--- a/book/bobcat.ini
+++ b/book/bobcat.ini
@@ -1,7 +1,7 @@
 # Example configuration file
 
 [Bobcat]
-book-enable=false  # Set this to true to use a (polyglot) book
+book-enable=true
 book-name=Bobcat2
 log-file=false     # Set this to true to create a log file for each game
 
